--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -651,6 +651,10 @@ video {
   height: 6rem;
 }
 
+.h-\[1020px\]{
+  height: 1020px;
+}
+
 .h-\[1400px\]{
   height: 1400px;
 }
@@ -737,6 +741,10 @@ video {
 
 .self-start{
   align-self: flex-start;
+}
+
+.self-end{
+  align-self: flex-end;
 }
 
 .rounded-\[20px\]{
@@ -893,6 +901,11 @@ video {
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(138 43 226 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-white{
