--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -562,6 +562,12 @@ video {
   }
 }
 
+@media (min-width: 830px){
+  .container{
+    max-width: 830px;
+  }
+}
+
 @media (min-width: 1024px){
   .container{
     max-width: 1024px;
@@ -604,6 +610,10 @@ video {
   left: 1.25rem;
 }
 
+.right-0{
+  right: 0px;
+}
+
 .right-4{
   right: 1rem;
 }
@@ -614,6 +624,10 @@ video {
 
 .top-4{
   top: 1rem;
+}
+
+.top-\[110\%\]{
+  top: 110%;
 }
 
 .z-\[1000000\]{
@@ -647,8 +661,16 @@ video {
   display: flex;
 }
 
+.h-16{
+  height: 4rem;
+}
+
 .h-24{
   height: 6rem;
+}
+
+.h-28{
+  height: 7rem;
 }
 
 .h-\[1020px\]{
@@ -661,6 +683,10 @@ video {
 
 .h-\[3px\]{
   height: 3px;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .w-2\/5{
@@ -747,6 +773,10 @@ video {
   align-self: flex-end;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .rounded-\[20px\]{
   border-radius: 20px;
 }
@@ -759,12 +789,21 @@ video {
   border-radius: 9999px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-\[3px\]{
   border-width: 3px;
 }
 
 .border-b-\[3px\]{
   border-bottom-width: 3px;
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(31 23 38 / var(--tw-border-opacity));
 }
 
 .border-primary{
@@ -798,8 +837,17 @@ video {
   background-size: cover;
 }
 
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-2{
   padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-8{
@@ -836,6 +884,11 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -856,6 +909,10 @@ video {
 
 .pt-28{
   padding-top: 7rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-center{
@@ -913,6 +970,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -939,6 +1002,11 @@ body {
   background-color: rgb(121 26 209 / var(--tw-bg-opacity));
 }
 
+.hover\:text-primaryHover:hover{
+  --tw-text-opacity: 1;
+  color: rgb(121 26 209 / var(--tw-text-opacity));
+}
+
 @media (max-width: 860px){
   .max-\[860px\]\:px-3{
     padding-left: 0.75rem;
@@ -948,6 +1016,12 @@ body {
   .max-\[860px\]\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+}
+
+@media not all and (min-width: 830px){
+  .max-mobileNav\:hidden{
+    display: none;
   }
 }
 
