--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -602,8 +602,16 @@ video {
   position: relative;
 }
 
+.inset-0{
+  inset: 0px;
+}
+
 .bottom-2{
   bottom: 0.5rem;
+}
+
+.left-1\/2{
+  left: 50%;
 }
 
 .left-5{
@@ -614,6 +622,10 @@ video {
   right: 0px;
 }
 
+.right-1{
+  right: 0.25rem;
+}
+
 .right-4{
   right: 1rem;
 }
@@ -622,8 +634,16 @@ video {
   top: 0px;
 }
 
+.top-1{
+  top: 0.25rem;
+}
+
 .top-4{
   top: 1rem;
+}
+
+.top-52{
+  top: 13rem;
 }
 
 .top-\[110\%\]{
@@ -632,6 +652,14 @@ video {
 
 .z-\[1000000\]{
   z-index: 1000000;
+}
+
+.z-\[2\]{
+  z-index: 2;
+}
+
+.z-\[3\]{
+  z-index: 3;
 }
 
 .mx-auto{
@@ -665,12 +693,20 @@ video {
   height: 4rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-24{
   height: 6rem;
 }
 
 .h-28{
   height: 7rem;
+}
+
+.h-80{
+  height: 20rem;
 }
 
 .h-\[1020px\]{
@@ -697,6 +733,10 @@ video {
   width: 60%;
 }
 
+.w-\[45em\]{
+  width: 45em;
+}
+
 .w-\[90\%\]{
   width: 90%;
 }
@@ -714,6 +754,11 @@ video {
   max-width: 40ch;
 }
 
+.-translate-x-1\/2{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-translate-y-12{
   --tw-translate-y: -3rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -729,6 +774,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -739,6 +788,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -775,6 +828,10 @@ video {
 
 .rounded-2xl{
   border-radius: 1rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
 }
 
 .rounded-\[20px\]{
@@ -828,9 +885,18 @@ video {
   background-color: rgb(31 23 38 / var(--tw-bg-opacity));
 }
 
+.bg-overlayBlack{
+  background-color: rgba(0, 0, 0, .6);
+}
+
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(138 43 226 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -867,6 +933,11 @@ video {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .px-8{
@@ -909,6 +980,10 @@ video {
 
 .pt-28{
   padding-top: 7rem;
+}
+
+.pt-32{
+  padding-top: 8rem;
 }
 
 .pt-5{
@@ -1025,6 +1100,12 @@ body {
   }
 }
 
+@media not all and (min-width: 768px){
+  .max-md\:w-\[95\%\]{
+    width: 95%;
+  }
+}
+
 @media (max-width: 768px){
   .max-\[768px\]\:hidden{
     display: none;
@@ -1048,6 +1129,11 @@ body {
     width: 95%;
   }
 
+  .max-sm\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .max-sm\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1059,6 +1145,23 @@ body {
   }
 
   .max-sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (max-width: 500px){
+  .max-\[500px\]\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .max-\[500px\]\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .max-\[500px\]\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
@@ -1083,5 +1186,11 @@ body {
   .max-\[460px\]\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 830px){
+  .mobileNav\:hidden{
+    display: none;
   }
 }
