--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -610,6 +610,10 @@ video {
   bottom: 0.5rem;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .left-1\/2{
   left: 50%;
 }
@@ -646,20 +650,32 @@ video {
   top: 13rem;
 }
 
+.top-\[100\%\]{
+  top: 100%;
+}
+
 .top-\[110\%\]{
   top: 110%;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .z-\[1000000\]{
   z-index: 1000000;
 }
 
-.z-\[2\]{
-  z-index: 2;
+.z-\[1000\]{
+  z-index: 1000;
 }
 
-.z-\[3\]{
-  z-index: 3;
+.z-\[1\]{
+  z-index: 1;
+}
+
+.z-\[999\]{
+  z-index: 999;
 }
 
 .mx-auto{
@@ -681,12 +697,24 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mt-20{
+  margin-top: 5rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
 
+.block{
+  display: block;
+}
+
 .flex{
   display: flex;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-16{
@@ -715,6 +743,10 @@ video {
 
 .h-\[1400px\]{
   height: 1400px;
+}
+
+.h-\[27rem\]{
+  height: 27rem;
 }
 
 .h-\[3px\]{
@@ -754,6 +786,14 @@ video {
   max-width: 40ch;
 }
 
+.max-w-\[50ch\]{
+  max-width: 50ch;
+}
+
+.origin-top{
+  transform-origin: top;
+}
+
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -774,8 +814,17 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-y-0{
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-row-reverse{
+  flex-direction: row-reverse;
 }
 
 .flex-col{
@@ -784,6 +833,10 @@ video {
 
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.items-start{
+  align-items: flex-start;
 }
 
 .items-center{
@@ -802,6 +855,10 @@ video {
   gap: 0.25rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
@@ -812,6 +869,14 @@ video {
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .gap-8{
@@ -903,6 +968,14 @@ video {
   background-size: cover;
 }
 
+.bg-center{
+  background-position: center;
+}
+
+.bg-no-repeat{
+  background-repeat: no-repeat;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -955,6 +1028,16 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -963,6 +1046,11 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5{
@@ -1045,6 +1133,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -1072,6 +1166,31 @@ body {
   color: rgb(31, 23, 38);
 }
 
+.before\:absolute::before{
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:inset-0::before{
+  content: var(--tw-content);
+  inset: 0px;
+}
+
+.before\:bg-overlayBlack::before{
+  content: var(--tw-content);
+  background-color: rgba(0, 0, 0, .6);
+}
+
+.before\:content-\[\'\'\]::before{
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.hover\:bg-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(138 43 226 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-primaryHover:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(121 26 209 / var(--tw-bg-opacity));
@@ -1080,6 +1199,29 @@ body {
 .hover\:text-primaryHover:hover{
   --tw-text-opacity: 1;
   color: rgb(121 26 209 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media not all and (min-width: 1024px){
+  .max-lg\:w-full{
+    width: 100%;
+  }
+
+  .max-lg\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-lg\:items-center{
+    align-items: center;
+  }
+
+  .max-lg\:text-center{
+    text-align: center;
+  }
 }
 
 @media (max-width: 860px){
@@ -1104,6 +1246,15 @@ body {
   .max-md\:w-\[95\%\]{
     width: 95%;
   }
+
+  .max-md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .max-md\:leading-relaxed{
+    line-height: 1.625;
+  }
 }
 
 @media (max-width: 768px){
@@ -1125,13 +1276,45 @@ body {
     top: 0.25rem;
   }
 
+  .max-sm\:h-\[18rem\]{
+    height: 18rem;
+  }
+
   .max-sm\:w-\[95\%\]{
     width: 95%;
+  }
+
+  .max-sm\:max-w-\[70ch\]{
+    max-width: 70ch;
+  }
+
+  .max-sm\:gap-5{
+    gap: 1.25rem;
+  }
+
+  .max-sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .max-sm\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .max-sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .max-sm\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .max-sm\:py-7{
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
   }
 
   .max-sm\:text-2xl{
@@ -1148,9 +1331,23 @@ body {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
+
+  .max-sm\:leading-relaxed{
+    line-height: 1.625;
+  }
 }
 
 @media (max-width: 500px){
+  .max-\[500px\]\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .max-\[500px\]\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
   .max-\[500px\]\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1164,6 +1361,27 @@ body {
   .max-\[500px\]\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+}
+
+@media (max-width: 470px){
+  .max-\[470px\]\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .max-\[470px\]\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .max-\[470px\]\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .max-\[470px\]\:leading-relaxed{
+    line-height: 1.625;
   }
 }
 
@@ -1186,6 +1404,26 @@ body {
   .max-\[460px\]\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (max-width: 400px){
+  .max-\[400px\]\:h-\[14rem\]{
+    height: 14rem;
+  }
+
+  .max-\[400px\]\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .max-\[400px\]\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .max-\[400px\]\:leading-relaxed{
+    line-height: 1.625;
   }
 }
 
