--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -701,6 +701,10 @@ video {
   margin-top: 5rem;
 }
 
+.mt-40{
+  margin-top: 10rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -782,6 +786,10 @@ video {
   width: 100%;
 }
 
+.max-w-\[28ch\]{
+  max-width: 28ch;
+}
+
 .max-w-\[40ch\]{
   max-width: 40ch;
 }
@@ -857,6 +865,10 @@ video {
 
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-12{
+  gap: 3rem;
 }
 
 .gap-2{
@@ -998,6 +1010,11 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1100,6 +1117,10 @@ video {
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[10rem\]{
+  font-size: 10rem;
 }
 
 .font-bold{
@@ -1211,6 +1232,10 @@ body {
     width: 100%;
   }
 
+  .max-lg\:max-w-\[50ch\]{
+    max-width: 50ch;
+  }
+
   .max-lg\:flex-col{
     flex-direction: column;
   }
@@ -1288,8 +1313,16 @@ body {
     max-width: 70ch;
   }
 
+  .max-sm\:gap-2{
+    gap: 0.5rem;
+  }
+
   .max-sm\:gap-5{
     gap: 1.25rem;
+  }
+
+  .max-sm\:gap-8{
+    gap: 2rem;
   }
 
   .max-sm\:px-4{
@@ -1330,6 +1363,10 @@ body {
   .max-sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .max-sm\:text-\[7rem\]{
+    font-size: 7rem;
   }
 
   .max-sm\:leading-relaxed{
