--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -701,8 +701,8 @@ video {
   margin-top: 5rem;
 }
 
-.mt-40{
-  margin-top: 10rem;
+.mt-32{
+  margin-top: 8rem;
 }
 
 .mt-5{
@@ -715,6 +715,10 @@ video {
 
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -831,6 +835,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .flex-row-reverse{
   flex-direction: row-reverse;
 }
@@ -857,6 +865,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.justify-items-center{
+  justify-items: center;
 }
 
 .gap-1{
@@ -893,6 +905,15 @@ video {
 
 .gap-8{
   gap: 2rem;
+}
+
+.gap-x-6{
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.gap-y-16{
+  row-gap: 4rem;
 }
 
 .self-start{
@@ -1119,6 +1140,11 @@ video {
   line-height: 1;
 }
 
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .text-\[10rem\]{
   font-size: 10rem;
 }
@@ -1133,6 +1159,10 @@ video {
 
 .leading-relaxed{
   line-height: 1.625;
+}
+
+.leading-snug{
+  line-height: 1.375;
 }
 
 .text-black65{
@@ -1227,6 +1257,12 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (max-width: 1320px){
+  .max-\[1320px\]\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media not all and (min-width: 1024px){
   .max-lg\:w-full{
     width: 100%;
@@ -1234,6 +1270,10 @@ body {
 
   .max-lg\:max-w-\[50ch\]{
     max-width: 50ch;
+  }
+
+  .max-lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .max-lg\:flex-col{
@@ -1363,6 +1403,11 @@ body {
   .max-sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .max-sm\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .max-sm\:text-\[7rem\]{
