--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -705,6 +705,10 @@ video {
   margin-top: 8rem;
 }
 
+.mt-40{
+  margin-top: 10rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -1172,6 +1176,16 @@ video {
   line-height: 1;
 }
 
+.text-8xl{
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-9xl{
+  font-size: 8rem;
+  line-height: 1;
+}
+
 .text-\[10rem\]{
   font-size: 10rem;
 }
@@ -1344,6 +1358,21 @@ body {
     line-height: 2.5rem;
   }
 
+  .max-md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .max-md\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .max-md\:text-8xl{
+    font-size: 6rem;
+    line-height: 1;
+  }
+
   .max-md\:leading-relaxed{
     line-height: 1.625;
   }
@@ -1479,6 +1508,23 @@ body {
   .max-\[500px\]\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+}
+
+@media (max-width: 480px){
+  .max-\[480px\]\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .max-\[480px\]\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .max-\[480px\]\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
