--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -646,6 +646,14 @@ video {
   top: 0.25rem;
 }
 
+.top-1\/2{
+  top: 50%;
+}
+
+.top-1\/4{
+  top: 25%;
+}
+
 .top-4{
   top: 1rem;
 }
@@ -660,6 +668,10 @@ video {
 
 .top-\[110\%\]{
   top: 110%;
+}
+
+.top-\[20\%\]{
+  top: 20%;
 }
 
 .z-50{
@@ -781,6 +793,14 @@ video {
   height: 10em;
 }
 
+.h-\[110px\]{
+  height: 110px;
+}
+
+.h-\[130px\]{
+  height: 130px;
+}
+
 .h-\[1400px\]{
   height: 1400px;
 }
@@ -793,12 +813,24 @@ video {
   height: 280px;
 }
 
+.h-\[2em\]{
+  height: 2em;
+}
+
 .h-\[3px\]{
   height: 3px;
 }
 
 .h-\[72px\]{
   height: 72px;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-16{
@@ -821,8 +853,24 @@ video {
   width: 12em;
 }
 
+.w-\[130px\]{
+  width: 130px;
+}
+
+.w-\[2em\]{
+  width: 2em;
+}
+
 .w-\[45em\]{
   width: 45em;
+}
+
+.w-\[50em\]{
+  width: 50em;
+}
+
+.w-\[550px\]{
+  width: 550px;
 }
 
 .w-\[80\%\]{
@@ -866,12 +914,21 @@ video {
   max-width: 70ch;
 }
 
+.max-w-\[95\%\]{
+  max-width: 95%;
+}
+
 .origin-top{
   transform-origin: top;
 }
 
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -897,6 +954,14 @@ video {
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.resize-none{
+  resize: none;
 }
 
 .grid-cols-3{
@@ -1020,8 +1085,16 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .border-2{
   border-width: 2px;
+}
+
+.border-4{
+  border-width: 4px;
 }
 
 .border-\[3px\]{
@@ -1072,6 +1145,10 @@ video {
   background-color: rgb(31 23 38 / var(--tw-bg-opacity));
 }
 
+.bg-black65{
+  background-color: rgba(31, 23, 38, .65);
+}
+
 .bg-overlayBlack{
   background-color: rgba(0, 0, 0, .6);
 }
@@ -1109,6 +1186,10 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .p-8{
@@ -1215,6 +1296,10 @@ video {
   padding-top: 1.25rem;
 }
 
+.pt-8{
+  padding-top: 2rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1291,6 +1376,11 @@ video {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1371,6 +1461,16 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (max-width: 1460px){
+  .max-\[1460px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[1460px\]\:items-start{
+    align-items: flex-start;
+  }
+}
+
 @media (max-width: 1320px){
   .max-\[1320px\]\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1432,6 +1532,14 @@ body {
 
   .max-md\:w-full{
     width: 100%;
+  }
+
+  .max-md\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-md\:items-start{
+    align-items: flex-start;
   }
 
   .max-md\:px-4{
@@ -1524,8 +1632,20 @@ body {
     width: 95%;
   }
 
+  .max-sm\:w-full{
+    width: 100%;
+  }
+
   .max-sm\:max-w-\[70ch\]{
     max-width: 70ch;
+  }
+
+  .max-sm\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-sm\:items-start{
+    align-items: flex-start;
   }
 
   .max-sm\:gap-1{
@@ -1603,12 +1723,23 @@ body {
     line-height: 1;
   }
 
+  .max-sm\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
   .max-sm\:text-\[7rem\]{
     font-size: 7rem;
   }
 
   .max-sm\:leading-relaxed{
     line-height: 1.625;
+  }
+}
+
+@media (max-width: 530px){
+  .max-\[530px\]\:w-full{
+    width: 100%;
   }
 }
 
@@ -1743,6 +1874,12 @@ body {
 
   .max-\[400px\]\:leading-relaxed{
     line-height: 1.625;
+  }
+}
+
+@media (max-width: 360px){
+  .max-\[360px\]\:flex-col{
+    flex-direction: column;
   }
 }
 
