--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -713,6 +713,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.ml-\[101px\]{
+  margin-left: 101px;
+}
+
 .ml-\[5\.75em\]{
   margin-left: 5.75em;
 }
@@ -825,6 +829,10 @@ video {
   height: 72px;
 }
 
+.h-\[85px\]{
+  height: 85px;
+}
+
 .h-full{
   height: 100%;
 }
@@ -873,6 +881,10 @@ video {
   width: 550px;
 }
 
+.w-\[600px\]{
+  width: 600px;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
@@ -883,6 +895,10 @@ video {
 
 .w-\[90\%\]{
   width: 90%;
+}
+
+.w-\[900px\]{
+  width: 900px;
 }
 
 .w-fit{
@@ -916,6 +932,10 @@ video {
 
 .max-w-\[95\%\]{
   max-width: 95%;
+}
+
+.max-w-full{
+  max-width: 100%;
 }
 
 .origin-top{
@@ -1600,6 +1620,10 @@ body {
     top: 0.25rem;
   }
 
+  .max-sm\:ml-\[86px\]{
+    margin-left: 86px;
+  }
+
   .max-sm\:mt-2{
     margin-top: 0.5rem;
   }
@@ -1616,12 +1640,20 @@ body {
     height: 48px;
   }
 
+  .max-sm\:h-\[70px\]{
+    height: 70px;
+  }
+
   .max-sm\:h-\[7em\]{
     height: 7em;
   }
 
   .max-sm\:w-\[60px\]{
     width: 60px;
+  }
+
+  .max-sm\:w-\[70px\]{
+    width: 70px;
   }
 
   .max-sm\:w-\[7em\]{
@@ -1732,6 +1764,11 @@ body {
     font-size: 7rem;
   }
 
+  .max-sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .max-sm\:leading-relaxed{
     line-height: 1.625;
   }
@@ -1755,6 +1792,22 @@ body {
 }
 
 @media (max-width: 500px){
+  .max-\[500px\]\:ml-0{
+    margin-left: 0px;
+  }
+
+  .max-\[500px\]\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .max-\[500px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[500px\]\:items-start{
+    align-items: flex-start;
+  }
+
   .max-\[500px\]\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -1860,6 +1913,18 @@ body {
 @media (max-width: 400px){
   .max-\[400px\]\:h-\[14rem\]{
     height: 14rem;
+  }
+
+  .max-\[400px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[400px\]\:gap-1{
+    gap: 0.25rem;
+  }
+
+  .max-\[400px\]\:gap-7{
+    gap: 1.75rem;
   }
 
   .max-\[400px\]\:text-2xl{
