--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -586,6 +586,18 @@ video {
   }
 }
 
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 .pointer-events-none{
   pointer-events: none;
 }
@@ -622,6 +634,10 @@ video {
   left: 50%;
 }
 
+.left-3{
+  left: 0.75rem;
+}
+
 .left-5{
   left: 1.25rem;
 }
@@ -632,6 +648,10 @@ video {
 
 .right-1{
   right: 0.25rem;
+}
+
+.right-3{
+  right: 0.75rem;
 }
 
 .right-4{
@@ -652,6 +672,10 @@ video {
 
 .top-1\/4{
   top: 25%;
+}
+
+.top-3{
+  top: 0.75rem;
 }
 
 .top-4{
@@ -686,6 +710,10 @@ video {
   z-index: 1000;
 }
 
+.z-\[1001\]{
+  z-index: 1001;
+}
+
 .z-\[1\]{
   z-index: 1;
 }
@@ -707,6 +735,10 @@ video {
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mb-16{
+  margin-bottom: 4rem;
 }
 
 .mb-2{
@@ -745,12 +777,20 @@ video {
   margin-top: 8rem;
 }
 
+.mt-4{
+  margin-top: 1rem;
+}
+
 .mt-40{
   margin-top: 10rem;
 }
 
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-7{
+  margin-top: 1.75rem;
 }
 
 .block{
@@ -789,6 +829,18 @@ video {
   height: 20rem;
 }
 
+.h-\[1\.5em\]{
+  height: 1.5em;
+}
+
+.h-\[100\%\]{
+  height: 100%;
+}
+
+.h-\[100px\]{
+  height: 100px;
+}
+
 .h-\[1020px\]{
   height: 1020px;
 }
@@ -807,6 +859,10 @@ video {
 
 .h-\[1400px\]{
   height: 1400px;
+}
+
+.h-\[25em\]{
+  height: 25em;
 }
 
 .h-\[27rem\]{
@@ -851,6 +907,22 @@ video {
 
 .w-3\/5{
   width: 60%;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-\[1\.5em\]{
+  width: 1.5em;
+}
+
+.w-\[100\%\]{
+  width: 100%;
+}
+
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[10em\]{
@@ -1105,6 +1177,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
@@ -1193,6 +1269,11 @@ video {
 
 .bg-no-repeat{
   background-repeat: no-repeat;
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover{
@@ -1320,6 +1401,10 @@ video {
   padding-top: 2rem;
 }
 
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1430,6 +1515,10 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-primary{
   transition-property: all 200ms ease;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1459,6 +1548,59 @@ body {
 .before\:content-\[\'\'\]::before{
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.after\:absolute::after{
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:inset-0::after{
+  content: var(--tw-content);
+  inset: 0px;
+}
+
+.after\:origin-left::after{
+  content: var(--tw-content);
+  transform-origin: left;
+}
+
+.after\:scale-x-0::after{
+  content: var(--tw-content);
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.after\:transform::after{
+  content: var(--tw-content);
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.after\:bg-overlayBlack::after{
+  content: var(--tw-content);
+  background-color: rgba(0, 0, 0, .6);
+}
+
+.after\:bg-primaryTransparent::after{
+  content: var(--tw-content);
+  background-color: rgba(138,43,226,.6);
+}
+
+.after\:transition-primary::after{
+  content: var(--tw-content);
+  transition-property: all 200ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.after\:content-\[\'\'\]::after{
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.hover\:bg-gray-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-primary:hover{
@@ -1546,6 +1688,10 @@ body {
     margin-left: .25em;
   }
 
+  .max-md\:w-4\/5{
+    width: 80%;
+  }
+
   .max-md\:w-\[95\%\]{
     width: 95%;
   }
@@ -1620,6 +1766,10 @@ body {
     top: 0.25rem;
   }
 
+  .max-sm\:ml-0{
+    margin-left: 0px;
+  }
+
   .max-sm\:ml-\[86px\]{
     margin-left: 86px;
   }
@@ -1648,6 +1798,10 @@ body {
     height: 7em;
   }
 
+  .max-sm\:h-\[85px\]{
+    height: 85px;
+  }
+
   .max-sm\:w-\[60px\]{
     width: 60px;
   }
@@ -1658,6 +1812,10 @@ body {
 
   .max-sm\:w-\[7em\]{
     width: 7em;
+  }
+
+  .max-sm\:w-\[85px\]{
+    width: 85px;
   }
 
   .max-sm\:w-\[95\%\]{
@@ -1703,6 +1861,16 @@ body {
   .max-sm\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .max-sm\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .max-sm\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
   .max-sm\:px-4{
