--- a/frontend/src/test/index.css
+++ b/frontend/src/test/index.css
@@ -753,6 +753,10 @@ video {
   margin-left: 5.75em;
 }
 
+.ml-\[87px\]{
+  margin-left: 87px;
+}
+
 .mt-12{
   margin-top: 3rem;
 }
@@ -791,6 +795,10 @@ video {
 
 .mt-7{
   margin-top: 1.75rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -885,6 +893,10 @@ video {
   height: 72px;
 }
 
+.h-\[75px\]{
+  height: 75px;
+}
+
 .h-\[85px\]{
   height: 85px;
 }
@@ -955,6 +967,10 @@ video {
 
 .w-\[600px\]{
   width: 600px;
+}
+
+.w-\[75px\]{
+  width: 75px;
 }
 
 .w-\[80\%\]{
@@ -1185,6 +1201,22 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-bl-none{
+  border-bottom-left-radius: 0px;
+}
+
+.rounded-br-none{
+  border-bottom-right-radius: 0px;
+}
+
+.rounded-tl-none{
+  border-top-left-radius: 0px;
+}
+
+.rounded-tr-none{
+  border-top-right-radius: 0px;
+}
+
 .border-2{
   border-width: 2px;
 }
@@ -1199,6 +1231,10 @@ video {
 
 .border-b-\[3px\]{
   border-bottom-width: 3px;
+}
+
+.border-t-0{
+  border-top-width: 0px;
 }
 
 .border-t-\[3px\]{
@@ -1770,6 +1806,10 @@ body {
     margin-left: 0px;
   }
 
+  .max-sm\:ml-\[45px\]{
+    margin-left: 45px;
+  }
+
   .max-sm\:ml-\[86px\]{
     margin-left: 86px;
   }
@@ -1788,6 +1828,10 @@ body {
 
   .max-sm\:h-\[48px\]{
     height: 48px;
+  }
+
+  .max-sm\:h-\[60px\]{
+    height: 60px;
   }
 
   .max-sm\:h-\[70px\]{
@@ -2103,6 +2147,11 @@ body {
   .max-\[400px\]\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .max-\[400px\]\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .max-\[400px\]\:leading-relaxed{
